          (problem only exists in Windows)
        - fixed RELEASE_TESTING test files so they simply skip if the required
          modules aren't installed (critic.t, meta.t and pod.t)
        - removed t/minimumversion.t, it wasn't being used anyhow
        - added configure_requires directive in Build.PL
        - added t/16-ties.t, tests all Ties

0.17    06.06.10
        fixing Build.PL executability (turned it off)
        add examples
        wrapped POD lines

0.16    15.02.10
        requiring environment variable for test that keeps failing

0.15    12.02.10
        removed boilerplate test
        as god is my non-existent witness, i will pass the tests!

0.14    11.02.10
        minor changes to pass tests

0.13    10.02.10
        repository in META.yml using Module::Build (cpanservice)
        allowng a longer time gap for a test
        correcting Changelog

0.12    13.08.09
        repository in META.yml using Module::Build (cpanservice)
        allowng a longer time gap for a test

0.11    02.08.09
        added author tests using Test::XT (thanks Adam Kennedy)
        added Makefile.PL and META.yml instead of leaving it to ./Build dist

0.10    02.08.09
        added explicit terms as GPLv2 or later, or artistic
        (thanks Andy Lester, Perlbuzz.com)

0.09    29.04.09
        ported 300_ping_stream.t to t/10-ping_stream.t
        ported 400_ping_syn.t to t/11-ping_syn.t
        ported 410_syn_host.t to t/12-syn_host.t
        ported 450_service.t to t/13-service.t
        ported 500_ping_icmp.t to t/14-ping_icmp.t
        ported 510_ping_udp.t to t/15-ping_udp.t
        (finished porting all tests from Net::Ping)
        added SERVICE_CHECK, SOURCE_VERIFY, BIND
        corrected POD _ping_object() example
        cleaned up all Ties
        added Carp to Build.PL requires

0.08    28.04.09
        fixed t/03-icmp.t test that prevented installation when admin tests
        added method (and POD for) create_ping_object_ok()